[gd_scene load_steps=4 format=3 uid="uid://6k4rimufybvb"]

[ext_resource type="Script" uid="uid://cw6xtmp2bkomq" path="res://scripts/main_menu.gd" id="1_main_menu_script"]
[ext_resource type="Texture2D" uid="uid://baptlwsan4ti2" path="res://assets/amongi.png" id="3_2wh52"]
[ext_resource type="Texture2D" uid="uid://de0whdesrc55i" path="res://assets/amongi garden.png" id="4_ow34m"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25606, 0.4892, 0.255246, 1)

[node name="PlayerNameInput" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 488.0
offset_top = 305.0
offset_right = 788.0
offset_bottom = 336.0
placeholder_text = "Enter your name..."
max_length = 20

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 488.0
offset_top = 340.0
offset_right = 788.0
offset_bottom = 371.0
text = "START GAME"

[node name="LoreButton" type="Button" parent="."]
layout_mode = 2
offset_left = 488.0
offset_top = 395.0
offset_right = 788.0
offset_bottom = 426.0
text = "LORE"

[node name="LeaderboardButton" type="Button" parent="."]
layout_mode = 2
offset_left = 486.0
offset_top = 435.0
offset_right = 786.0
offset_bottom = 466.0
text = "LEADERBOARD"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 487.0
offset_top = 524.0
offset_right = 787.0
offset_bottom = 555.0
text = "EXIT"

[node name="Amongi" type="Sprite2D" parent="."]
position = Vector2(1454, 692)
texture = ExtResource("3_2wh52")

[node name="Amongi2" type="Sprite2D" parent="."]
position = Vector2(277, 452)
scale = Vector2(-1, 1)
texture = ExtResource("3_2wh52")

[node name="Amongi3" type="Sprite2D" parent="."]
position = Vector2(1294, 35)
scale = Vector2(1, -1)
texture = ExtResource("3_2wh52")

[node name="AmongiGarden" type="Sprite2D" parent="."]
position = Vector2(1078, 292)
scale = Vector2(0.774052, 0.683333)
texture = ExtResource("4_ow34m")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1301.0
offset_top = 298.0
offset_right = 1358.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 90
text = "n"
